# fisherman

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
demos/: dns.tape  ping.tape  traceroute.tape
src/: app.rs  main.rs  network.rs  ui.rs
